# Rust-Web-Scrapper

./: .gitignore  Cargo.toml  README.md
WIP-Main/: Main.WIP.md
frontend/: .gitignore  angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.ts
frontend/src/app/core/components/header/: header.component.css  header.component.html  header.component.ts
frontend/src/app/core/components/home/: home.component.html  home.component.ts
frontend/src/app/shared/assets/icons/github-icon/: github-icon.component.css  github-icon.component.html  github-icon.component.ts
frontend/src/app/shared/components/hero/: hero.component.css  hero.component.html
frontend/src/app/shared/styles/: global.css
lib/src/: lib.rs  main.rs
lib/src/config/: mod.rs  thread_config.rs
lib/src/crawler/: crawler.rs  fetch.rs  get.rs  mod.rs  parse.rs
lib/src/crawler/utils/: mod.rs
lib/src/utils/: mod.rs
src/: lib.rs  main.rs
src/crawler/: fetch.rs  mod.rs
src/utils/: link_queue.rs  mod.rs
web-interface/: Cargo.toml
