[package]
name = "rust-scrapper"
version = "1.0.1"
edition = "2021"
authors = ["alexeiddg"]

[workspace]
members = ["web-interface"]

[lib]
path = "lib/src/lib.rs"

[[bin]]
name = "rust-scrapper"
path = "lib/src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
surf = "2.3.2"
url = "2.5.2"
html5ever = "0.27.0"

